--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "robo_friends",
-  "homepage": " https://dekki-aero.github.io/RoboFriends",
+  "homepage": " https://dekki-aero.github.io/Robo-Friends",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
